--- a/DataScienceFem/index.html
+++ b/DataScienceFem/index.html
@@ -12,6 +12,7 @@
   <script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/app.css">
 </head>
 
 <body>
