Cambio_ Colore de la pag

--- a/DataScienceFem/index.html
+++ b/DataScienceFem/index.html
@@ -69,11 +69,11 @@
           <div class="video-box">
             <img src="images/arts/intro-section-illustration.png" alt="video illutration" class="img-fluid">
             <a href="#" class="glightbox position-absolute top-50 start-50 translate-middle">
-              <span>
+              <!-- <span>
                 <i class="fas fa-play-circle"></i>
-              </span>
-              <span class="border-animation border-animation--border-1"></span>
-              <span class="border-animation border-animation--border-2"></span>
+              </span> -->
+              <!-- <span class="border-animation border-animation--border-1"></span>  -->
+              <!-- <span class="border-animation border-animation--border-2"></span> -->
             </a>
           </div>
         </div>
@@ -626,7 +626,7 @@
   <!-- /////////////////////////////////////////////////////////////////////////////////////////////////////////
               START SECTION 8 - GET STARTED  
 /////////////////////////////////////////////////////////////////////////////////////////////////////////-->
-  <section id="contact" class="get-started">
+ <!--  <section id="contact" class="get-started">
     <div class="container">
       <div class="row text-center">
         <h1 class="display-3 fw-bold text-capitalize">Get started</h1>
@@ -634,10 +634,10 @@
         <p class="lh-lg">
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero illum architecto modi.
         </p>
-      </div>
+      </div> -->
 
       <!-- START THE CTA CONTENT  -->
-      <div class="row text-white">
+      <!-- <div class="row text-white">
         <div class="col-12 col-lg-6 gradient shadow p-3">
           <div class="cta-info w-100">
             <h4 class="display-4 fw-bold">100% Satisfaction Guaranteed</h4>
@@ -684,7 +684,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- ///////////////////////////////////////////////////////////////////////////////////////////
                            START SECTION 9 - THE FOOTER  
@@ -693,7 +693,7 @@
     <div class="container">
       <div class="row">
         <!-- START THE SOCIAL MEDIA CONTENT  -->
-        <div class="footer-sm" style="background-color: #212121;">
+        <div class="footer-sm" style="background-color: #07726d;">
           <div class="container">
             <div class="row py-4 text-center text-white">
               <div class="col-lg-5 col-md-6 mb-4 mb-md-0">
